--- a/WS04/styles.html
+++ b/WS04/styles.html
@@ -25,7 +25,7 @@
             <li>Toinen kohta</li>
         </ul>
 
-        <a class="linkkipaikka" href="second.html">Tehtävän 4B tiedosto</a>
+        <a class="linkkipaikka" href="index.html">Tehtävän 4B tiedosto</a>
     </body>
 
 </html>
