--- a/WS04/index.html
+++ b/WS04/index.html
@@ -19,12 +19,12 @@
         <br>
         <br>
         <br>
-        <img id="kuva1" src="/4B/Kuvat/kukka.jpg" alt="kukka">
+        <img id="kuva1" src="kukka.jpg" alt="kukka">
         <br>
         <br>
 
         <figure>
-            <img id="kuva2" src="/4B/Kuvat/kukka2.jpg" alt="kukka2">
+            <img id="kuva2" src="kukka2.jpg" alt="kukka2">
             <figcaption>2 Kaunista kukkaa</figcaption>
         </figure>
 
