--- a/WS08/about.html
+++ b/WS08/about.html
@@ -62,17 +62,17 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="#">
-        <img src="/8B/kuvat/vesilasi.png" class="center" alt="vesilasi">
+        <img src="vesilasi.png" class="center" alt="vesilasi">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="#">
-        <img src="/8B/kuvat/vesikuppi.png" class="center" alt="vesikuppi">
+        <img src="vesikuppi.png" class="center" alt="vesikuppi">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="#">
-        <img src="/8B/kuvat/vesikäsi.png" class="center" alt="vesikäsi">
+        <img src="vesikäsi.png" class="center" alt="vesikäsi">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
