--- a/WS08/contact.html
+++ b/WS08/contact.html
@@ -12,7 +12,7 @@
 
     <style>
         body {
-            background-image: url("/8B/kuvat/Sade2.gif");
+            background-image: url("Sade2.gif");
             background-size: cover;
         }
     </style>
@@ -63,13 +63,13 @@
 <br>
 <br>
 
-<a href="https://www.instagram.com/water/"> <img src="/8B/kuvat/insta.png" alt="insta" class="centerImg"></a>
+<a href="https://www.instagram.com/water/"> <img src="insta.png" alt="insta" class="centerImg"></a>
 <br>
-<a href="https://www.facebook.com/water/"> <img src="/8B/kuvat/face.png" alt="face" class="centerImg"></a>
+<a href="https://www.facebook.com/water/"> <img src="/face.png" alt="face" class="centerImg"></a>
 <br>
-<a href="https://www.twitter.com/water/"> <img src="/8B/kuvat/twitter.png" alt="twitter" class="centerImg"></a>
+<a href="https://www.twitter.com/water/"> <img src="twitter.png" alt="twitter" class="centerImg"></a>
 <br>
-<a href="https://mail.google.com/mail/"> <img src="/8B/kuvat/email.png" alt="email" class="centerImg"></a>
+<a href="https://mail.google.com/mail/"> <img src="email.png" alt="email" class="centerImg"></a>
 
 <div class="b-example-divider"></div>
 
