--- a/WS08/about.html
+++ b/WS08/about.html
@@ -10,7 +10,7 @@
     <title>About Us</title>
     <style>
         body {
-            background-image: url("/8B/kuvat/vesitausta.jpg");
+            background-image: url("vesitausta.jpg");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
