--- a/WS08/contact.html
+++ b/WS08/contact.html
@@ -65,7 +65,7 @@
 
 <a href="https://www.instagram.com/water/"> <img src="insta.png" alt="insta" class="centerImg"></a>
 <br>
-<a href="https://www.facebook.com/water/"> <img src="/face.png" alt="face" class="centerImg"></a>
+<a href="https://www.facebook.com/water/"> <img src="face.png" alt="face" class="centerImg"></a>
 <br>
 <a href="https://www.twitter.com/water/"> <img src="twitter.png" alt="twitter" class="centerImg"></a>
 <br>
